--- a/docs/study/starbuzz/starbuzz.css
+++ b/docs/study/starbuzz/starbuzz.css
@@ -15,17 +15,18 @@ body {
   background:       #efe5d0 url(images/background.gif) top left;
   font-size:        105%;
   padding:          15px;
-  margin:           10px;
-  margin:           0px 10px 10px 10px;
-  width: 420px;
-  float: left;
+  margin:          0px 330px 10px 10px;
 }
 
 #sidebar {
   background:       #efe5d0 url(images/background.gif) bottom right;
   font-size:        105%;
   padding:          15px;
-  margin:           0px 10px 10px 470px;
+  margin:           0px 10px 10px 10px;
+  position: absolute;
+  top: 128px;
+  right: 0px;
+  width: 280px;
 }
 
 #footer {
