--- a/docs/study/starbuzz/starbuzz.css
+++ b/docs/study/starbuzz/starbuzz.css
@@ -75,3 +75,13 @@ a:visited {
 #headerSlogan {
 float: right;
 }
+#award {
+position: absolute;
+top: 30px;
+left: 365px;
+}
+#coupon {
+position: fixed;
+top: 300px;
+left: 100px;
+}
