--- a/docs/study/starbuzz/starbuzz.css
+++ b/docs/study/starbuzz/starbuzz.css
@@ -81,8 +81,8 @@ top: 30px;
 left: 365px;
 }
 #coupon {
-position: fixed;
-top: 350px;
+position: relative;
+top: 20px;
 left: -90px;
 }
 #coupon a, img {
