--- a/docs/study/starbuzz/starbuzz.css
+++ b/docs/study/starbuzz/starbuzz.css
@@ -27,7 +27,7 @@ vertical-align: top;
 
 #main {
   display: table-cell;
-  background:       #efe5d0 url(images/background.gif) top left;
+  background:       #efe5d0 ;
   font-size:        105%;
   padding:          15px;
   vertical-align: top;
