--- a/docs/study/journal/journal.css
+++ b/docs/study/journal/journal.css
@@ -49,3 +49,8 @@ background-color: #fcaba7;
 tr:nth-child(odd) {
 background-color: #fcaba7;
 }
+li{
+list-style-image: url(image/backpack.gif);
+padding-top: 5px;
+margin-left: 20px;
+}
